# Backend/src/Core/Gpt/I18nUseCase/TranslationRequest.ts
@@ -1,0 +1,4 @@
+export default interface TranslationRequest {
+    language: string;
+    data: Json;
+}
